--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -9,11 +9,16 @@
 
 }
 
+
+
+
 body {
     font-family: 'Ubuntu', sans-serif;
     overflow-x: hidden;
     /*Esto se asegura de que si hay objetos grandes, no se desborden en el eje x*/
     max-width: 1500px;
+    background-color: #edf2fb;
+    background-image: linear-gradient(to right, #edf2fb 0%, #b6d4fe 35%, #89c0ff 50%, #4dabf7 65%, #3498db 100%);
 }
 
 /*Aqui voy a cambiar el estilo de los links a del nav*/
@@ -99,6 +104,38 @@ main {
 .contenedorhijo1 img {
     width: 100%;
     height: auto;
+    max-height: 1700px;
+}
+
+
+.contenedorhijo1 img.banneryoga{
+    width: 100%;
+    height: auto;
+    max-height: 2200px;
+}
+
+/*Colocaré los contenedores grid para la pagina ropa*/
+
+.contenedormaingrid{
+    display: grid;
+    grid-template-columns: 2fr 3fr; /*el primer hijo ocupará 33% y el segundo un 66%*/
+    width: 100%;
+    max-height: 100%;
+    height: 50rem;
+}
+
+.contenedormaingridhijo1{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(202, 225, 247);
+    justify-content: center;
+}
+.contenedormaingridhijo1 h1{
+align-self: center;
+}
+
+
+.contenedormaingridhijo2{
 }
 
 
@@ -117,7 +154,7 @@ div h1 {
 }
 
 .contenedormain span {
-    color: rgb(74, 138, 233);
+    color: rgb(7, 90, 214);
 }
 
 div p {
