--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -13,8 +13,12 @@ body {
     overflow-x: hidden;
     /*Esto se asegura de que si hay objetos grandes, no se desborden en el eje x*/
     max-width: 1500px;
-    background-color: #E8F6F8;
-    background-image: linear-gradient(135deg, #E8F6F8 25%, #BCE3E7 50%, #8ED0D3 75%);
+}
+/*Aqui defino colores de fondo para cada pagina*/
+.bodybackgroundcolor1{
+    background-image: linear-gradient(135deg, #E8F6F8 0%, #E8F6F8 25%, #8ED0D3 50%, #E8F6F8 75%, #E8F6F8 100%);
+}.bodybackgroundcolor2{
+    background-image: linear-gradient(135deg, #FFF3F1 0%, #FFF3F1 25%, #F8C4BE 50%, #FFF3F1 75%, #FFF3F1 100%);
 }
 
 a {
@@ -54,41 +58,38 @@ main {
     margin-bottom: 8rem;
 }
 
-/*Estilos del boton que sube hasta el top*/
-#btn-volver-arriba {
-    position: fixed;
-    bottom: 20px;
-    right: 2px;
-    background-color: white;
-    border: 2px solid skyblue;
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    padding: 12px 20px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    width: 20px;
-    height: 20px;
-    /*Mueve el texto en eje y*/
-    line-height: 5px;
-    /*Mueve el texto en eje x*/
-    text-indent: -30px;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 10px solid skyblue;
-}
-#btn-volver-arriba:hover {
-    background-color: #f3729f;
-    color: white;
-}
-
 /*Contenedor que agrupa contenedores en columna, usado como contenedor principal de main*/
 .contenedormain {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 8vw 5vw;
-    align-items: center;
+    margin: 5vw 5vw;
+}
+.contenedormainsinmargin{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.contenedormain a {
+    display: flex;
+    justify-content: center;
+    margin: 5vw;
+}
+.contenedormain  img{
+    width:100%;
+    height: auto;
+    max-height: 1300px;
+    object-fit: contain;
+    position: top;
+}
+
+.contenedormain a img{
+    width: 70%;
+    height: auto;
+    max-height: 1700px;
+}
+.colorh2{
+    background-color: #fab9d0;
 }
 
 /*Contenedores de porque meditar index, contenedor principal de main que agrupa en la misma fila*/
@@ -100,7 +101,6 @@ main {
     justify-content: center;
     flex-wrap: nowrap;
 }
-
 /*Contenedor hijo que agrupa elementos en columna*/
 .contenedorhijo1 {
     display: flex;
@@ -109,25 +109,20 @@ main {
     justify-content: center;
 
 }
-
 .contenedorhijo1 span {
     color: rgb(74, 138, 233);
 
 }
-
 .contenedorhijo1 img {
     width: 100%;
     height: auto;
     max-height: 1700px;
 }
-
-
 .contenedorhijo1 img.banneryoga {
     width: 100%;
     height: auto;
     max-height: 1700px;
 }
-
 /*Colocaré los contenedores  para la pagina ropa*/
 /*Este contenedor grid contiene las secciones de clasificacion horizontal de ropa al inicio*/
 .contenedormaingrid {
@@ -138,7 +133,6 @@ main {
     max-height: 100%;
     height: 50rem;
 }
-
 /*Contenedor que tiene el titulo de ropa, agrupa en columna*/
 .gridhijo1 {
     display: flex;
@@ -166,12 +160,9 @@ main {
     margin: 1rem;
     justify-content: space-between;
 }
-
 .contenedorropa h2 {
     color: rgb(12, 12, 12);
 }
-
-
 .contenedorropa img {
     max-width: 350px;
     max-height: 300px;
@@ -183,24 +174,20 @@ main {
 .contenedorropa1 {
     background: linear-gradient(to left, #ffffff, #a4d1f5);
 }
-
 /*Aqui haré los contenedores para agrupar las imagenes de ropa en dos columnas*/
 .contenedortops {
     display: flex;
     flex-wrap: wrap;
     width: 50%;
 }
-
 /*Le coloco color de fonto al titulo de tops en la seccion tops*/
 .colorfondotitulotop {
     background-color: #f8a5c2;
 }
-
 /*Le coloco color de fonto al titulo de joggers en la seccion joggers*/
 .colorfondotitulojogger {
     background-color: #8ED0D3;
 }
-
 /*Le daré aqui estilo a las imagenes de los tops de ropa*/
 .contenedortops img {
     max-width: 350px;
@@ -209,7 +196,6 @@ main {
     height: auto;
     object-fit: cover;
 }
-
 /*Contenedor con un color de fondo asignado a los tops de ropa*/
 .contenedortopsbackgroundcolor {
     background-color: #f7f7f7;
@@ -218,7 +204,6 @@ main {
     /* gradiente radial */
     padding: 3vw;
 }
-
 /*Contenedor con un color de fondo asignado a los pantalones de ropa*/
 .contenedorpantalonbackgroundcolor {
     background-color: #f8a5c2;
@@ -227,19 +212,19 @@ main {
     /* gradiente radial */
     padding: 3vw;
 }
-
-
-
-
-
 /*Clase contenedor que da el borde inferior azul*/
-.contenedormainbordeinferior {
+.contenedormainbordeinferior1 {
     padding-bottom: 5rem;
     border-bottom: 50px solid rgb(27, 137, 240);
 }
+.contenedormainbordeinferior2 {
+    padding-bottom: 5rem;
+    border-bottom: 50px solid #E87E64;
+    
+}
+
 
 /*Desde aqui se modifica el tamaño de las letras H1 h2 p*/
-
 div h1 {
     font-size: 5vw !important;
     text-align: center;
